# HPEC22-RTLflow

./: LICENSE  Makefile  hpec.aux  hpec.bbl  hpec.bib  hpec.blg  hpec.dvi  hpec.ps  hpec.tex
Experiment/: camera_dnn.tex  camera_dnn_taskflow  camera_dnn_tbb  camera_result_tbb  camera_result_tf  camera_timer_all  camera_total  camera_tv80.tex  dnn.tex  result_tbb  scale_tbb  timer_tbb  total  tv80.tex
Experiment/before_camera/: hpec_result_tbb  result_scale_tbb  scale.tex  scale_tf  tbb  (+4 more)
Experiment/before_camera/code/timer/: CMakeLists.txt  backup_tbb.cpp  process.hpp  sc_taskflow.cpp  script.sh  tbb.cpp  tbb_out  timer.cpp  timer_tv80_exp.cpp
Fig/: DNN.odg  ParallelDNN.eps  composition.dot  composition.eps  composition.odg  composition2.dot  dnn.dot  dnn.eps  dump.dot  dump.eps  first_example.eps  first_example.odg  framework_demo.eps  framework_demo.odg  framework_example.dot  framework_example.eps  graph_traversal.dot  graph_traversal.eps  parallel_dnn.eps  parallel_dnn.odg  scheduling.eps  scheduling.odg  timing_analysis.dot  timing_analysis.eps  visualization.eps  visualization.odg  vlsi_timing.eps  vlsi_timing.odg  wavefront.dot  wavefront.eps  wavefront.odg  wavefront_diagram.eps
Result/: full_memory_usage  less_memory_usage  memory.tex  memory_usage  memory_usage_5  omp_parallel_dnn_10rounds_5epochs_8cores  omp_parallel_dnn_10rounds_5epochs_8cores_3layers  taskflow_parallel_dnn_10rounds_5epochs_8cores  taskflow_parallel_dnn_10rounds_5epochs_8cores_3layers  taskflow_result_parallel_dnn_14cores_10dnns_5layers  tbb_parallel_dnn_10rounds_5epochs_8cores_3layers
(+153 files in other folders)
